--- a/lht_columns.css
+++ b/lht_columns.css
@@ -6,8 +6,8 @@
    Case Problem 2
 
    Columns Style Sheet
-   Author: 
-   Date:   
+   Author: Riley Kneen-Teed
+   Date: 02/04/2023 
 
    Filename:   lht_columns.css
 
