--- a/lht_tables.css
+++ b/lht_tables.css
@@ -24,8 +24,23 @@
    thead{
       display: none;
    }
-   thead h1{
+   table h1{
       display: none;
+   }
+   caption{
+      background-color: #333333;
+      color: white;
+      font-size: 1.5em;
+      line-height: 2em;
+   }
+   td {
+      border: 1px dotted gray;
+      color: rgb(11, 12, 145);
+      position: relative;
+      width: 40%;
+      padding-left: 40%;
+      min-height: 40px;
+
    }
 
  }
