--- a/lht_tables.css
+++ b/lht_tables.css
@@ -37,11 +37,17 @@
       border: 1px dotted gray;
       color: rgb(11, 12, 145);
       position: relative;
-      width: 40%;
+      
       padding-left: 40%;
       min-height: 40px;
 
    }
+   tr:nth-of-type(odd){
+      background-color: rgb(255,235,178);
+      border: 2px solid gray;
+
+   }
+
 
  }
 
