--- a/lht_tables.css
+++ b/lht_tables.css
@@ -112,6 +112,15 @@ th, td {
    /* allows the browser to avoid overflow of the cell */
    word-wrap: break-word;
  }
+td{
+   /* Sets the backround, and text color for the table contents, but not the days of the week*/
+  background-color: rgba(171, 171, 171, 0.6); 
+
+  color: rgb(11, 12, 145);
+}
+td[data-date*='Sep']{
+
+}
 
 
 
